--- a/views/personal.ejs
+++ b/views/personal.ejs
@@ -9,7 +9,7 @@
 
   <nav>
     <ul>
-      <li style="color: #ae2012;">KW.</li>
+      <li class="highlight-word">KW.</li>
     </ul>
     <ul class="shift-this-lol">
       <li><a href="#about-me">About Me</a></li>
@@ -69,8 +69,39 @@
   </div>
 
   <div id="projects">
-    <h2>Projects</h2>
-    <p>Did nothing lol </p>
+    
+    <div>
+      <h2 class="highlight-word">Projects</h2>
+      <div class="projects-container">
+        <div>
+          <h4 class="highlight-word">VetVault (Pet Tracker)</h4>
+          <ul>
+            <li>A mini-project to track your furry friends or animals.</li>
+            <li>It also simulates Customer-Vetrinarian communication to faciliate medicine for their animals.</li>
+            <li>Uses MySQL database where we incorporated triggers, and other functions.</li>
+            <li>Node.JS for backend, with login system as well.</li>
+          </ul>
+        </div>
+  
+        <div>
+          <h4 class="highlight-word">RemindlyProject</h4>
+          <ul>
+            <li>Is a reminder web application, where you can add, delete, and edit reminders.</li>
+            <li>Utilizes Node.JS and other node modules such as "passport" and "OAuth".</li>
+          </ul>
+        </div>
+  
+        <div>
+          <h4 class="highlight-word">Subscription System</h4>
+          <ul>
+            <li>Currently working in progress</li>
+            <li>The aim is to have a subscription system working along with creating a working free-trial.</li>
+            <li>Utilizes Google Cloud Project, and its services to fully deploy the application.</li>
+          </ul>
+        </div>
+      </div>
+      
+    </div>
     <button class="edit-btn" style="display:none;">Edit</button>
   </div>
 
