--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,16 +27,9 @@
         <button type="submit" class="login-btn">Sign-in</button>
       </form>
       <div class="or-divider">- or Sign In With -</div>
-      <button class="google-btn" onclick="signInWithGoogle()">Google</button>
+      <a href="/auth/google" class="google-btn">Google</a>
     </div>
   </div>
-
-  <script>
-    function signInWithGoogle() {
-      // Add your Google sign-in logic here
-      alert("Google sign-in clicked");
-    }
-  </script>
 
 </body>
 </html>
