--- a/views/personal.ejs
+++ b/views/personal.ejs
@@ -34,14 +34,12 @@
     </ul>
   </nav>
 
-
-
   <div id="about-me">
     <div class="about-me-content">
       <div class="more-content">
         <h2 class="highlight-word">About Me</h2>
-        <p>Hey there, my name is <span class="highlight-word">Keziah</span> and here are some stuff about me!</p>
-        <p>
+        <p class="editable-content">Hey there, my name is <span class="highlight-word">Keziah</span> and here are some stuff about me!</p>
+        <p class="editable-content">
           I am currently a student at the British Columbia Institute of Technology (BCIT), pursuing a diploma in the Computer Information Technology (CIT) program. With this diploma, I aspire to become a System Administrator and advance my interest in Cybersecurity!
         </p>
         <button class="edit-btn" style="display:none;">Edit</button>
@@ -53,61 +51,57 @@
   <div id="hobbies">
     <img src="/images/cam1.png" alt="idk">
     <div style="margin-left: 5%; " class="more-content">
-      <h2 class="highlight-word">Some Hobbies I love:</h2>
+      <h2 class="highlight-word editable-content">Some Hobbies I love:</h2>
       
       <ul>
-        <li>Building Computers and keyboards!</li>
-        <li>Going on walks (sometimes hiking)</li>
-        <li>Badminton</li>
-        <li>Reading Books! (currently on a Fantasy Genre Spree)</li>
-        <li>Photography!</li>
-        <li>and especially, food!</li>
+        <li class="editable-content">Building Computers and keyboards!</li>
+        <li class="editable-content">Going on walks (sometimes hiking)</li>
+        <li class="editable-content">Badminton</li>
+        <li class="editable-content">Reading Books! (currently on a Fantasy Genre Spree)</li>
+        <li class="editable-content">Photography!</li>
+        <li class="editable-content">and especially, food!</li>
       </ul>
     </div>
-
-
   </div>
 
   <div id="projects">
-    
     <div>
       <h2 class="highlight-word">Projects</h2>
       <div class="projects-container">
         <div>
-          <h4 class="highlight-word">VetVault (Pet Tracker)</h4>
+          <h4 class="highlight-word editable-content">VetVault (Pet Tracker)</h4>
           <ul>
-            <li>A mini-project to track your furry friends or animals.</li>
-            <li>It also simulates Customer-Vetrinarian communication to faciliate medicine for their animals.</li>
-            <li>Uses MySQL database where we incorporated triggers, and other functions.</li>
-            <li>Node.JS for backend, with login system as well.</li>
+            <li class="editable-content">A mini-project to track your furry friends or animals.</li>
+            <li class="editable-content">It also simulates Customer-Vetrinarian communication to faciliate medicine for their animals.</li>
+            <li class="editable-content">Uses MySQL database where we incorporated triggers, and other functions.</li>
+            <li class="editable-content">Node.JS for backend, with login system as well.</li>
           </ul>
         </div>
   
         <div>
-          <h4 class="highlight-word">RemindlyProject</h4>
+          <h4 class="highlight-word editable-content">RemindlyProject</h4>
           <ul>
-            <li>Is a reminder web application, where you can add, delete, and edit reminders.</li>
-            <li>Utilizes Node.JS and other node modules such as "passport" and "OAuth".</li>
+            <li class="editable-content">Is a reminder web application, where you can add, delete, and edit reminders.</li>
+            <li class="editable-content">Utilizes Node.JS and other node modules such as "passport" and "OAuth".</li>
           </ul>
         </div>
   
         <div>
-          <h4 class="highlight-word">Subscription System</h4>
+          <h4 class="highlight-word editable-content">Subscription System</h4>
           <ul>
-            <li>Currently working in progress</li>
-            <li>The aim is to have a subscription system working along with creating a working free-trial.</li>
-            <li>Utilizes Google Cloud Project, and its services to fully deploy the application.</li>
+            <li class="editable-content">Currently working in progress</li>
+            <li class="editable-content">The aim is to have a subscription system working along with creating a working free-trial.</li>
+            <li class="editable-content">Utilizes Google Cloud Project, and its services to fully deploy the application.</li>
           </ul>
         </div>
       </div>
-      
     </div>
     <button class="edit-btn" style="display:none;">Edit</button>
   </div>
 
   <div id="github-contributions">
     <h2 class="highlight-word">GitHub</h2>
-    <p>My current activity and contributions on GitHub.</p>
+    <p class="editable-content">My current activity and contributions on GitHub.</p>
     <button class="edit-btn" style="display:none;">Edit</button>
     <div id="calendar-component" username="kuppoh" theme-color="#ae2012" background-color="#161a1d"></div>
   </div>
@@ -115,13 +109,12 @@
   <div id="contacts">
     <h2 class="highlight-word">Contacts</h2>
     <div class="contact-details">
-      <p><span class="highlight-word">Email:</span> keziah@notreal.com</p>
-      <p><span class="highlight-word">Phone:</span> 666-000-6969</p>
+      <p><span class="highlight-word editable-content">Email:</span> keziah@notreal.com</p>
+      <p><span class="highlight-word editable-content">Phone:</span> 666-000-6969</p>
     </div>
     <button class="edit-btn" style="display:none;">Edit</button>
   </div>
 
-
   <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <script src="./js/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
