--- a/views/personal.ejs
+++ b/views/personal.ejs
@@ -2,8 +2,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles.css">
-  <script type="module" defer
-    src="https://cdn.jsdelivr.net/gh/imananoosheh/github-contributions-fetch@latest/github_calendar_widget.js"></script>
+  <script type="module" defer src="https://cdn.jsdelivr.net/gh/imananoosheh/github-contributions-fetch@latest/github_calendar_widget.js"></script>
   <title>Personal Portfolio</title>
 </head>
 
@@ -43,16 +42,11 @@
     <div class="about-me-content">
       <div class="more-content">
         <h2 class="highlight-word">About Me</h2>
-        <p class="editable-content">Hey there, my name is <span class="highlight-word">Keziah</span> and here are some
-          stuff about me!</p>
-        <p class="editable-content">
-          I am currently a student at the British Columbia Institute of Technology (BCIT), pursuing a diploma in the
-          Computer Information Technology (CIT) program. With this diploma, I aspire to become a System Administrator
-          and advance my interest in Cybersecurity!
-        </p>
+        <p class="editable-content" contenteditable="false">Hey there, my name is <span class="highlight-word">Keziah</span> and here are some stuff about me!</p>
+        <p class="editable-content" contenteditable="false">I am currently a student at the British Columbia Institute of Technology (BCIT), pursuing a diploma in the Computer Information Technology (CIT) program. With this diploma, I aspire to become a System Administrator and advance my interest in Cybersecurity!</p>
         <% if (isAuthenticated) { %>
           <button class="edit-btn">Edit</button>
-          <% } %>
+        <% } %>
       </div>
       <img id="profile-pic" src="/images/just-trying-it-out.png" alt="me">
     </div>
@@ -60,19 +54,19 @@
 
   <div id="hobbies">
     <img src="/images/cam1.png" alt="idk">
-    <div style="margin-left: 5%; " class="more-content">
-      <h2 class="highlight-word editable-content">Some Hobbies I love:</h2>
+    <div style="margin-left: 5%;" class="more-content">
+      <h2 class="highlight-word editable-content" contenteditable="false">Some Hobbies I love:</h2>
       <% if (isAuthenticated) { %>
         <button class="edit-btn">Edit</button>
-        <% } %>
-          <ul>
-            <li class="editable-content">Building Computers and keyboards!</li>
-            <li class="editable-content">Going on walks (sometimes hiking)</li>
-            <li class="editable-content">Badminton</li>
-            <li class="editable-content">Reading Books! (currently on a Fantasy Genre Spree)</li>
-            <li class="editable-content">Photography!</li>
-            <li class="editable-content">and especially, food!</li>
-          </ul>
+      <% } %>
+      <ul>
+        <li class="editable-content" contenteditable="false">Building Computers and keyboards!</li>
+        <li class="editable-content" contenteditable="false">Going on walks (sometimes hiking)</li>
+        <li class="editable-content" contenteditable="false">Badminton</li>
+        <li class="editable-content" contenteditable="false">Reading Books! (currently on a Fantasy Genre Spree)</li>
+        <li class="editable-content" contenteditable="false">Photography!</li>
+        <li class="editable-content" contenteditable="false">and especially, food!</li>
+      </ul>
     </div>
   </div>
 
@@ -81,74 +75,65 @@
       <h2 class="highlight-word">Projects</h2>
       <% if (isAuthenticated) { %>
         <button class="edit-btn">Edit</button>
-        <% } %>
-          <div class="projects-container">
-            <div>
-              <h4 class="highlight-word editable-content">VetVault (Pet Tracker)</h4>
-              <% if (isAuthenticated) { %>
-                <button class="edit-btn">Edit</button>
-                <% } %>
-                  <ul>
-                    <li class="editable-content">A mini-project to track your furry friends or animals.</li>
-                    <li class="editable-content">It also simulates Customer-Vetrinarian communication to faciliate
-                      medicine for their animals.</li>
-                    <li class="editable-content">Uses MySQL database where we incorporated triggers, and other
-                      functions.</li>
-                    <li class="editable-content">Node.JS for backend, with login system as well.</li>
-                  </ul>
-            </div>
-
-            <div>
-              <h4 class="highlight-word editable-content">RemindlyProject</h4>
-              <% if (isAuthenticated) { %>
-                <button class="edit-btn">Edit</button>
-                <% } %>
-                  <ul>
-                    <li class="editable-content">Is a reminder web application, where you can add, delete, and edit
-                      reminders.</li>
-                    <li class="editable-content">Utilizes Node.JS and other node modules such as "passport" and "OAuth".
-                    </li>
-                  </ul>
-            </div>
-
-            <div>
-              <h4 class="highlight-word editable-content">Subscription System</h4>
-              <% if (isAuthenticated) { %>
-                <button class="edit-btn">Edit</button>
-                <% } %>
-                  <ul>
-                    <li class="editable-content">Currently working in progress</li>
-                    <li class="editable-content">The aim is to have a subscription system working along with creating a
-                      working free-trial.</li>
-                    <li class="editable-content">Utilizes Google Cloud Project, and its services to fully deploy the
-                      application.</li>
-                  </ul>
-            </div>
-          </div>
-    </div>
-    <% if (isAuthenticated) { %>
-      <button class="edit-btn">Edit</button>
       <% } %>
+      <div class="projects-container">
+        <div>
+          <h4 class="highlight-word editable-content" contenteditable="false">VetVault (Pet Tracker)</h4>
+          <% if (isAuthenticated) { %>
+            <button class="edit-btn">Edit</button>
+          <% } %>
+          <ul>
+            <li class="editable-content" contenteditable="false">A mini-project to track your furry friends or animals.</li>
+            <li class="editable-content" contenteditable="false">It also simulates Customer-Vetrinarian communication to facilitate medicine for their animals.</li>
+            <li class="editable-content" contenteditable="false">Uses MySQL database where we incorporated triggers, and other functions.</li>
+            <li class="editable-content" contenteditable="false">Node.JS for backend, with login system as well.</li>
+          </ul>
+        </div>
+
+        <div>
+          <h4 class="highlight-word editable-content" contenteditable="false">RemindlyProject</h4>
+          <% if (isAuthenticated) { %>
+            <button class="edit-btn">Edit</button>
+          <% } %>
+          <ul>
+            <li class="editable-content" contenteditable="false">Is a reminder web application, where you can add, delete, and edit reminders.</li>
+            <li class="editable-content" contenteditable="false">Utilizes Node.JS and other node modules such as "passport" and "OAuth".</li>
+          </ul>
+        </div>
+
+        <div>
+          <h4 class="highlight-word editable-content" contenteditable="false">Subscription System</h4>
+          <% if (isAuthenticated) { %>
+            <button class="edit-btn">Edit</button>
+          <% } %>
+          <ul>
+            <li class="editable-content" contenteditable="false">Currently working in progress</li>
+            <li class="editable-content" contenteditable="false">The aim is to have a subscription system working along with creating a working free-trial.</li>
+            <li class="editable-content" contenteditable="false">Utilizes Google Cloud Project, and its services to fully deploy the application.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div id="github-contributions">
     <h2 class="highlight-word">GitHub</h2>
-    <p class="editable-content">My current activity and contributions on GitHub.</p>
+    <p class="editable-content" contenteditable="false">My current activity and contributions on GitHub.</p>
     <% if (isAuthenticated) { %>
       <button class="edit-btn">Edit</button>
-      <% } %>
-        <div id="calendar-component" username="kuppoh" theme-color="#ae2012" background-color="#161a1d"></div>
+    <% } %>
+    <div id="calendar-component" username="kuppoh" theme-color="#ae2012" background-color="#161a1d"></div>
   </div>
 
   <div id="contacts">
     <h2 class="highlight-word">Contacts</h2>
     <div class="contact-details">
-      <p><span class="highlight-word editable-content">Email:</span> keziah@notreal.com</p>
-      <p><span class="highlight-word editable-content">Phone:</span> 666-000-6969</p>
+      <p><span class="highlight-word editable-content" contenteditable="false">Email:</span> keziah@notreal.com</p>
+      <p><span class="highlight-word editable-content" contenteditable="false">Phone:</span> 666-000-6969</p>
     </div>
     <% if (isAuthenticated) { %>
       <button class="edit-btn">Edit</button>
-      <% } %>
+    <% } %>
   </div>
 
   <script src="https://apis.google.com/js/platform.js" async defer></script>
