--- a/views/personal.ejs
+++ b/views/personal.ejs
@@ -45,7 +45,7 @@
         <p class="editable-content" contenteditable="false">Hey there, my name is <span class="highlight-word">Keziah</span> and here are some stuff about me!</p>
         <p class="editable-content" contenteditable="false">I am currently a student at the British Columbia Institute of Technology (BCIT), pursuing a diploma in the Computer Information Technology (CIT) program. With this diploma, I aspire to become a System Administrator and advance my interest in Cybersecurity!</p>
         <% if (isAuthenticated) { %>
-          <button class="edit-btn">Edit</button>
+          <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
         <% } %>
       </div>
       <img id="profile-pic" src="/images/just-trying-it-out.png" alt="me">
@@ -57,7 +57,7 @@
     <div style="margin-left: 5%;" class="more-content">
       <h2 class="highlight-word editable-content" contenteditable="false">Some Hobbies I love:</h2>
       <% if (isAuthenticated) { %>
-        <button class="edit-btn">Edit</button>
+        <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
       <% } %>
       <ul>
         <li class="editable-content" contenteditable="false">Building Computers and keyboards!</li>
@@ -73,14 +73,11 @@
   <div id="projects">
     <div>
       <h2 class="highlight-word">Projects</h2>
-      <% if (isAuthenticated) { %>
-        <button class="edit-btn">Edit</button>
-      <% } %>
       <div class="projects-container">
         <div>
           <h4 class="highlight-word editable-content" contenteditable="false">VetVault (Pet Tracker)</h4>
           <% if (isAuthenticated) { %>
-            <button class="edit-btn">Edit</button>
+            <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
           <% } %>
           <ul>
             <li class="editable-content" contenteditable="false">A mini-project to track your furry friends or animals.</li>
@@ -93,7 +90,7 @@
         <div>
           <h4 class="highlight-word editable-content" contenteditable="false">RemindlyProject</h4>
           <% if (isAuthenticated) { %>
-            <button class="edit-btn">Edit</button>
+            <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
           <% } %>
           <ul>
             <li class="editable-content" contenteditable="false">Is a reminder web application, where you can add, delete, and edit reminders.</li>
@@ -104,7 +101,7 @@
         <div>
           <h4 class="highlight-word editable-content" contenteditable="false">Subscription System</h4>
           <% if (isAuthenticated) { %>
-            <button class="edit-btn">Edit</button>
+            <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
           <% } %>
           <ul>
             <li class="editable-content" contenteditable="false">Currently working in progress</li>
@@ -120,7 +117,7 @@
     <h2 class="highlight-word">GitHub</h2>
     <p class="editable-content" contenteditable="false">My current activity and contributions on GitHub.</p>
     <% if (isAuthenticated) { %>
-      <button class="edit-btn">Edit</button>
+      <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
     <% } %>
     <div id="calendar-component" username="kuppoh" theme-color="#ae2012" background-color="#161a1d"></div>
   </div>
@@ -132,7 +129,7 @@
       <p><span class="highlight-word editable-content" contenteditable="false">Phone:</span> 666-000-6969</p>
     </div>
     <% if (isAuthenticated) { %>
-      <button class="edit-btn">Edit</button>
+      <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
     <% } %>
   </div>
   <script>
