--- a/views/personal.ejs
+++ b/views/personal.ejs
@@ -25,10 +25,8 @@
           </div>
         </a>
         <div class="dropdown-content">
-          <a href="#about-me">About Me</a>
-          <a href="#projects">Projects</a>
-          <a href="#github-contributions">GitHub Contributions</a>
           <% if (isAuthenticated) { %>
+            <p>Welcome, <%= user && user.displayName ? user.displayName : "Guest" %>!</p>
             <a href="/logout" id="logout-link">Logout</a>
           <% } else { %>
             <a href="/login" id="login-link">Login</a>
@@ -37,6 +35,7 @@
       </li>
     </ul>
   </nav>
+  
 
   <div id="about-me">
     <div class="about-me-content">
