--- a/views/personal.ejs
+++ b/views/personal.ejs
@@ -25,8 +25,10 @@
           </div>
         </a>
         <div class="dropdown-content">
+          <a href="#about-me">About Me</a>
+          <a href="#projects">Projects</a>
+          <a href="#github-contributions">GitHub Contributions</a>
           <% if (isAuthenticated) { %>
-            <p>Welcome, <%= user && user.displayName ? user.displayName : "Guest" %>!</p>
             <a href="/logout" id="logout-link">Logout</a>
           <% } else { %>
             <a href="/login" id="login-link">Login</a>
@@ -35,7 +37,6 @@
       </li>
     </ul>
   </nav>
-  
 
   <div id="about-me">
     <div class="about-me-content">
