--- a/views/personal.ejs
+++ b/views/personal.ejs
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +7,7 @@
 </head>
 
 <body>
+
   <nav>
     <ul>
       <li class="highlight-word">KW.</li>
@@ -26,8 +25,10 @@
           </div>
         </a>
         <div class="dropdown-content">
+          <a href="#about-me">About Me</a>
+          <a href="#projects">Projects</a>
+          <a href="#github-contributions">GitHub Contributions</a>
           <% if (isAuthenticated) { %>
-            <p>Welcome, <%= user && user.displayName ? user.displayName : "Guest" %>!</p>
             <a href="/logout" id="logout-link">Logout</a>
           <% } else { %>
             <a href="/login" id="login-link">Login</a>
@@ -37,19 +38,16 @@
     </ul>
   </nav>
 
+  <% if (user) { %>
+    <h1>welcome back <%= user %>!</h1>
+  <% } %>
+
   <div id="about-me">
     <div class="about-me-content">
       <div class="more-content">
         <h2 class="highlight-word">About Me</h2>
-        <p class="editable-content" contenteditable="false">
-          Hey there, my name is 
-          <span class="highlight-word">
-            <%= user && user.displayName ? user.displayName : "Keziah" %>
-          </span> and here are some things about me!
-        </p>
-        <p class="editable-content" contenteditable="false">
-          I am currently a student at the British Columbia Institute of Technology (BCIT), pursuing a diploma in the Computer Information Technology (CIT) program. With this diploma, I aspire to become a System Administrator and advance my interest in Cybersecurity!
-        </p>
+        <p class="editable-content" contenteditable="false">Hey there, my name is <span class="highlight-word">Keziah</span> and here are some stuff about me!</p>
+        <p class="editable-content" contenteditable="false">I am currently a student at the British Columbia Institute of Technology (BCIT), pursuing a diploma in the Computer Information Technology (CIT) program. With this diploma, I aspire to become a System Administrator and advance my interest in Cybersecurity!</p>
         <% if (isAuthenticated) { %>
           <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
         <% } %>
@@ -71,7 +69,7 @@
         <li class="editable-content" contenteditable="false">Badminton</li>
         <li class="editable-content" contenteditable="false">Reading Books! (currently on a Fantasy Genre Spree)</li>
         <li class="editable-content" contenteditable="false">Photography!</li>
-        <li class="editable-content" contenteditable="false">And especially, food!</li>
+        <li class="editable-content" contenteditable="false">and especially, food!</li>
       </ul>
     </div>
   </div>
@@ -80,7 +78,6 @@
     <div>
       <h2 class="highlight-word">Projects</h2>
       <div class="projects-container">
-        <!-- Example project entry -->
         <div>
           <h4 class="highlight-word editable-content" contenteditable="false">VetVault (Pet Tracker)</h4>
           <% if (isAuthenticated) { %>
@@ -88,9 +85,32 @@
           <% } %>
           <ul>
             <li class="editable-content" contenteditable="false">A mini-project to track your furry friends or animals.</li>
-            <li class="editable-content" contenteditable="false">Simulates Customer-Veterinarian communication to facilitate medicine for their animals.</li>
+            <li class="editable-content" contenteditable="false">It also simulates Customer-Vetrinarian communication to facilitate medicine for their animals.</li>
             <li class="editable-content" contenteditable="false">Uses MySQL database where we incorporated triggers, and other functions.</li>
             <li class="editable-content" contenteditable="false">Node.JS for backend, with login system as well.</li>
+          </ul>
+        </div>
+
+        <div>
+          <h4 class="highlight-word editable-content" contenteditable="false">RemindlyProject</h4>
+          <% if (isAuthenticated) { %>
+            <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
+          <% } %>
+          <ul>
+            <li class="editable-content" contenteditable="false">Is a reminder web application, where you can add, delete, and edit reminders.</li>
+            <li class="editable-content" contenteditable="false">Utilizes Node.JS and other node modules such as "passport" and "OAuth".</li>
+          </ul>
+        </div>
+
+        <div>
+          <h4 class="highlight-word editable-content" contenteditable="false">Subscription System</h4>
+          <% if (isAuthenticated) { %>
+            <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
+          <% } %>
+          <ul>
+            <li class="editable-content" contenteditable="false">Currently working in progress</li>
+            <li class="editable-content" contenteditable="false">The aim is to have a subscription system working along with creating a working free-trial.</li>
+            <li class="editable-content" contenteditable="false">Utilizes Google Cloud Project, and its services to fully deploy the application.</li>
           </ul>
         </div>
       </div>
@@ -103,29 +123,23 @@
     <% if (isAuthenticated) { %>
       <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
     <% } %>
-    <div id="calendar-component" username="<%= user && user.githubUsername ? user.githubUsername : 'kuppoh' %>" theme-color="#ae2012" background-color="#161a1d"></div>
+    <div id="calendar-component" username="kuppoh" theme-color="#ae2012" background-color="#161a1d"></div>
   </div>
 
   <div id="contacts">
     <h2 class="highlight-word">Contacts</h2>
     <div class="contact-details">
-      <p>
-        <span class="highlight-word editable-content" contenteditable="false">Email:</span>
-        <%= user && user.email ? user.email : "keziah@notreal.com" %>
-      </p>
-      <p>
-        <span class="highlight-word editable-content" contenteditable="false">Phone:</span> 666-000-6969
-      </p>
+      <p><span class="highlight-word editable-content" contenteditable="false">Email:</span> keziah@notreal.com</p>
+      <p><span class="highlight-word editable-content" contenteditable="false">Phone:</span> 666-000-6969</p>
     </div>
     <% if (isAuthenticated) { %>
       <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
     <% } %>
   </div>
-
   <script>
     var isAuthenticated = <%= JSON.stringify(isAuthenticated) %>;
   </script>
+
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="/js/main.js"></script>
 </body>
-</html>
