--- a/views/personal.ejs
+++ b/views/personal.ejs
@@ -39,7 +39,7 @@
   </nav>
 
   <% if (user) { %>
-    <h1>welcome back <%= user %>!</h1>
+    <h1>welcome back <%= user.displayName %>!</h1>
   <% } %>
 
   <div id="about-me">
