--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,13 +30,6 @@
       <button class="google-btn" onclick="signInWithGoogle()">Google</button>
     </div>
   </div>
-
-  <script>
-    function signInWithGoogle() {
-      // Add your Google sign-in logic here
-      alert("Google sign-in clicked");
-    }
-  </script>
-
+  <script src="main.js"></script>
 </body>
 </html>
