--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
+  <link rel="stylesheet" href="/styles.css">
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
