--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,7 +34,7 @@
         });
         auth2.signIn({
           ux_mode: 'redirect',
-          redirect_uri: 'http://localhost:3000/auth/google/callback'
+          redirect_uri: 'https://portfolio.rat-monkee.online/auth/google/callback'
         });
       });
     }
