--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <link rel="stylesheet" href="/styles.css">
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+
 </head>
 <body>
   <div id="sign-in-stuff">
@@ -21,22 +23,25 @@
         <button type="submit" class="login-btn">Sign-in</button>
       </form>
       <div class="or-divider">- or Sign In With -</div>
-      <button class="google-btn" onclick="signInWithGoogle()">Google</button>
+      <button id="google-signin" class="google-btn">Google</button>
     </div>
   </div>
+
   <script>
-    function signInWithGoogle() {
-      console.log('signInWithGoogle called');
-      gapi.load('auth2', function() {
-        console.log('gapi.auth2 loaded');
-        const auth2 = gapi.auth2.init({
-          client_id: '624534888737-450ntk4o8gvsdgc9emnuv3tv6pk6jocu.apps.googleusercontent.com',
-        });
-        auth2.signIn({
-          ux_mode: 'redirect',
-          redirect_uri: 'https://portfolio.rat-monkee.online/auth/google/callback'
-        });
+    window.onload = function() {
+      google.accounts.id.initialize({
+        client_id: '624534888737-450ntk4o8gvsdgc9emnuv3tv6pk6jocu.apps.googleusercontent.com',
+        callback: handleCredentialResponse,
       });
+      google.accounts.id.renderButton(
+        document.getElementById('google-signin'),
+        { theme: 'outline', size: 'large' } // Customize the button
+      );
+    };
+  
+    function handleCredentialResponse(response) {
+      console.log('Encoded JWT ID token:', response.credential);
+      // Send the token to your backend for verification and login
     }
   </script>
 </body>
