--- a/views/personal.ejs
+++ b/views/personal.ejs
@@ -2,8 +2,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles.css">
-  <script type="module" defer
-    src="https://cdn.jsdelivr.net/gh/imananoosheh/github-contributions-fetch@latest/github_calendar_widget.js"></script>
+  <script type="module" defer src="https://cdn.jsdelivr.net/gh/imananoosheh/github-contributions-fetch@latest/github_calendar_widget.js"></script>
   <title>Personal Portfolio</title>
 </head>
 
@@ -31,9 +30,9 @@
           <a href="#github-contributions">GitHub Contributions</a>
           <% if (isAuthenticated) { %>
             <a href="/logout" id="logout-link">Logout</a>
-            <% } else { %>
-              <a href="/login" id="login-link">Login</a>
-              <% } %>
+          <% } else { %>
+            <a href="/login" id="login-link">Login</a>
+          <% } %>
         </div>
       </li>
     </ul>
@@ -41,17 +40,25 @@
 
   <% if (user && isAuthenticated) { %>
     <h1>welcome back <%= user.displayName %>!</h1>
-    <% } %>
+  <% } %>
 
-  <h2>About Me</h2>
-  <p>
-    <% if (portfolioData?.aboutMe?.description) { %>
-      <%= portfolioData.aboutMe.description.join(' ') %>
-    <% } else { %>
-      No information available.
-    <% } %>
-  </p>
-
+  <div id="about-me">
+    <div class="about-me-content">
+      <div class="more-content">
+        <h2 class="highlight-word">About Me</h2>
+        <p class="editable-content" contenteditable="<%= isAuthenticated ? 'false' : 'true' %>">
+          Hey there, my name is <span class="highlight-word">Keziah</span> and here are some stuff about me!
+        </p>
+        <p class="editable-content" contenteditable="<%= isAuthenticated ? 'false' : 'true' %>">
+          I am currently a student at the British Columbia Institute of Technology (BCIT), pursuing a diploma in the Computer Information Technology (CIT) program.
+        </p>
+        <% if (isAuthenticated) { %>
+          <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
+        <% } %>
+      </div>
+      <img id="profile-pic" src="/images/just-trying-it-out.png" alt="me">
+    </div>
+  </div>
 
   <div id="hobbies">
     <img src="/images/cam1.png" alt="idk">
